k8s/charts/templates/ingresses/all-ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/force-ssl-redirect":"true","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"axric-ingress","namespace":"axric"},"spec":{"ingressClassName":"nginx","rules":[{"host":"axrique.com","http":{"paths":[{"backend":{"service":{"name":"axric-fe","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["axrique.com"],"secretName":"axric-fe-tls"}]}}
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2026-03-05T07:09:03Z"
    generation: 2
    name: axric-ingress
    namespace: axric
    resourceVersion: "1007736"
    uid: f79564f8-5d64-46ac-88fe-c1d9a1138a11
  spec:
    ingressClassName: nginx
    rules:
    - host: axrique.com
      http:
        paths:
        - backend:
            service:
              name: axric-fe
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - axrique.com
      secretName: axric-fe-tls
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
